--- a/catalog.html
+++ b/catalog.html
@@ -5,10 +5,10 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-    <img src="graphics/frame header/Group.png" class="logo" alt="Логотип" width="145" height="36">
+    <img src="/images/header/logo.png" class="logo" alt="Логотип" width="145" height="36">
     <section>
       <form class="search">
-        <img src="graphics/frame header/search/search/Vector.png" alt="лупа" width="16" height="16">
+        <img src="/images/header/search.svg" alt="лупа" width="16" height="16">
       <input type="text" name="search" placeholder="Текст поиска">
       <button type="submit" class="search-button">Найти</button>
     </form>
@@ -17,7 +17,7 @@
       <nav class="navigation">
         <ul class="navigation-user">
           <li class="navigation-item-user">
-            <img src="graphics/frame header/header/Vector.png" alt="человек" width="13" height="12">
+            <img src="/images/header/enter.svg" alt="вход-иконка" width="13" height="12">
             <a href="#" class="navigation-link-enter">
               <span class="visually-hidden">
                 Войти
@@ -25,7 +25,7 @@
             </a>
           </li>
           <li class="navigation-item-user">
-            <img src="graphics/frame header/Vector.png" alt="сравнение" width="10" height="12">
+            <img src="/images/header/compare.svg" alt="сравнение-иконка" width="10" height="12">
             <a href="#" class="navigation-link-compare">
               <span class="visually-hidden">
               Сравнить
@@ -33,8 +33,8 @@
             </a>
           </li>
           <li class="navigation-item-user">
-            <img src="graphics/frame header/2.png" alt="2" width="21" height="21">
-            <img src="graphics/frame header/Vector-2.png" alt="корзина" width="16" height="14">
+            <img src="/images/header/2.png" alt="2" width="21" height="21">
+            <img src="/images/header/bin.svg" alt="корзина" width="16" height="14">
             <a href="#" class="navigation-link-bin">
               <span class="visually-hidden">
               Корзина
@@ -67,7 +67,7 @@
           </a>
         </li>
         </ul>
-        <img src="/graphics/frame header/01.png" alt="01" width="250" height="135">
+        <img src="/images/header/01.png" alt="01" width="250" height="135">
       </nav>
     </header>
 
@@ -88,10 +88,14 @@
         </header>
         <section class="catalog-products">
             <h2 class="filter">фильтр:</h2>
-            <h2 class="sort">сортировка:</h3>
+            <h2 class="sort">сортировка:</h2>
             <select name="sort">
                 <option value="popular">Популярные</option>
             </select>
+            <button type="button"><img src="/images/catalog/up.svg" alt="стрелка вверх" width="11" height="10">
+            </button>
+            <button type="button"><img src="/images/catalog/down.svg" alt="стрелка вниз" width="11" height="10">
+            </button>
         </section>
       <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="catalog-filter-group">
@@ -154,28 +158,28 @@
       <section class="catalog-products">
         <ul class="catalog-products-list">
           <li class="catalog-products-item">
-            <img src="/graphics/catalog/HTML 1 _ Девайс-14/product-2.png" alt="Палка для селфи" width="360" height="380">
+            <img src="/images/catalog/selfie stick.jpg" alt="Палка для селфи" width="360" height="380">
             <h3>Любительская
                 селфи-палка
             </h3>
             <span>500 р</span>
           </li>
           <li class="catalog-products-item">
-            <img src="/graphics/catalog/HTML 1 _ Девайс-14/product-2-1.png" alt="Профессиональная селфи-палка" width="360" height="380">
+            <img src="/images/catalog/stick pro foto.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
             <h3>Профессиональная
                   селфи-палка
             </h3>
             <span>1 500 р</span>
           </li>
           <li class="catalog-products-item">
-            <img src="/graphics/catalog/HTML 1 _ Девайс-14/product-2-2.png" alt="Непотопляемая селфи-палка" width="360" height="380">
+            <img src="/images/catalog/water r stick.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
             <h3>Непотопляемая
                 селфи-палка
             </h3>
             <span>2 500 р</span>
           </li>
           <li class="catalog-products-item">
-            <img src="/graphics/catalog/HTML 1 _ Девайс-14/product-2-3.png" alt="Палка следуй за мной" width="360" height="380">
+            <img src="/images/catalog/hand foto.jpg" alt="Палка следуй за мной" width="360" height="380">
             <h3>Селфи-палка "Следуй за мной"
             </h3>
             <span>1 500 р</span>
@@ -216,18 +220,19 @@
     </main>
 
     <footer class="page-footer">
-        <img src="/graphics/footer/HTML 1 _ Девайс-10/Group.png" class="logo" alt="Логотип" width="144.9" height="36">
-        <adress>Санкт-Петербург,набережная 
-          реки Карповки, 5, литера П</adress>
-          <a href="#" class="delivery">доставка</a>
-          <a href="#" class="warranty"> гарантия</a>
-          <a href="#contacts" class="contacts">контакты</a>
-          <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          <a class="academy-logo" href="https://htmlacademy.ru/">
-            <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-1.png" alt="телеграм" width="13.34" height="11.19">
-            <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-2.png" alt="ютуб" width="16" height="10.67">
-            <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector-3.png" alt="твиттер" width="15" height="14.06">
-            <img src="/graphics/footer/HTML 1 _ Девайс-10/Vector.png" alt="Логотип Академии" width="114.9" height="32.9"></a>
-            </footer>
-          </body>
-        </html> 
+      <img src="/images/footer/logo yellow.png" class="logo" alt="Логотип" width="144.9" height="36">
+      <adress>Санкт-Петербург,набережная 
+               реки Карповки, 5, литера П
+      </adress>
+      <a href="#" class="delivery">доставка</a>
+      <a href="#" class="warranty"> гарантия</a>
+      <a href="#contacts" class="contacts">контакты</a>
+      <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="academy-logo" href="https://htmlacademy.ru/">
+        <img src="/images/footer/tg.svg" alt="телеграм" width="13.34" height="11.19">
+        <img src="/images/footer/youtube.svg" alt="ютуб" width="16" height="10.67">
+        <img src="/images/footer/twit.svg" alt="твиттер" width="15" height="14.06">
+      <img src="/images/footer/academy logo.png" alt="Логотип Академии" width="114.9" height="32.9"></a>
+    </footer>
+  </body>
+</html> 
