:heavy_check_mark: Сборка #3

--- a/3/catalog.html
+++ b/3/catalog.html
@@ -49,28 +49,28 @@
         
         <ul class="navigation navigation-list">
           <li class="navigation navigation-item">
-            <a href="catalog.html" class="link catalog">
+            <a href="catalog.html" class="link catalog-main">
               каталог товаров
             </a>
           </li>
           <li class="navigation navigation-item">
-            <a href="#" class="link delivery">
+            <a href="#" class="link delivery-main">
               доставка
             </a>
           </li>
           <li class="navigation navigation-item">
-            <a href="#" class="link warranty">
+            <a href="#" class="link warranty-main">
               гарантия
             </a>
           </li>
         </li>
         <li class="navigation navigation-item">
-          <a href="#" class="link contacts">
+          <a href="#" class="link contacts-main">
             контакты
           </a>
         </li>
         </ul>
-        <span class="text01">01</span>
+        <span class="text-white-number-01">01</span>
       </nav>
     </header></div>
 
@@ -227,10 +227,10 @@
       <address class="description">Санкт-Петербург,набережная 
                реки Карповки, 5, литера П
       </address>
-      <a href="#" class="footer delivery">доставка</a>
-      <a href="#" class="footer warranty"> гарантия</a>
-      <a href="#contacts" class="footer contacts">контакты</a>
-      <a class="tel" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+      <a href="#" class="link delivery">доставка</a>
+      <a href="#" class="link warranty"> гарантия</a>
+      <a href="#contacts" class="link contacts">контакты</a>
+      <a class="tel white" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
       <a class="academy-logo" href="https://htmlacademy.ru/">
         <img src="/images/footer/tg.svg" alt="телеграм" width="13.34" height="11.19">
         <img src="/images/footer/youtube.svg" alt="ютуб" width="16" height="10.67">
