--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header class="page-header">
         <img src="/images/header/logo.svg" class="logo" alt="Логотип Девайс" width="145" height="36">
         <div class="header">
-          <section class="navigation">
+          <section class="search">
           <form class="search">
             <img src="/images/header/search.svg" alt="лупа" width="16" height="16">
             <input type="text" name="search" class="search" placeholder="Текст поиска">
@@ -45,8 +45,10 @@
                 </a>
               </li>
            </ul>
+          </nav>
 
-            <ul class="navigation navigation-list">
+           <div class="navigation-box">
+            <ul class="navigation-list">
               <li class="navigation navigation-item">
                 <a href="catalog.html" class="link catalog-main">
                  каталог товаров
@@ -63,14 +65,14 @@
                 </a>
               </li>
             </li>
-            <li class="navigation navigation-item">
-              <a href="#" class="link contacts-main">
-                контакты
-              </a>
-            </li>
+              <li class="navigation navigation-item">
+                <a href="#" class="link contacts-main">
+                  контакты
+                </a>
+              </li>
             </ul>
             <span class="text-white-number-01">01</span>
-          </nav>
+          </div>
         </div>
 
       <div class="quadcopt">
